@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999965';
+our $VERSION='0.999966';
 
 
 use 5.005;
