@@ -21,6 +21,13 @@
 
 2013-01-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.999966 released.
+
+        * Fix for MozRepl install in Makefile.PL.
+
+
+2013-01-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.999965 released.
 
         * More code to attempt permissions fix in Makefile.PL.
